[WIP] 用 Lambda 表达式来表示实体类的字段